@@ -21,6 +21,11 @@ Core and Builtins
 Library
 -------
 
+- Issue #19330: the unnecessary wrapper functions have been removed from the
+  implementations of the new contextlib.redirect_stdout and
+  contextlib.suppress context managers, which also ensures they provide
+  reasonable help() output on instances
+
 - Issue #18685: Restore re performance to pre-PEP 393 levels.
 
 - Issue #19339: telnetlib module is now using time.monotonic() when available
